<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_name_custom"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".Activity.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="290dp"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:outlineAmbientShadowColor="@color/purple_700"
        app:cardCornerRadius="22dp"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2.2"
                android:gravity="center"
                android:orientation="horizontal">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/lf30_editor_fggosqdo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tôi nói"
                    android:textColor="@color/green_4"
                    android:textSize="46sp"
                    android:textStyle="italic|bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="6.8"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        app:drawableLeftCompat="@drawable/ic_baseline_person_24" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_email"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        app:drawableLeftCompat="@drawable/ic_baseline_password_24" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt_password"
                            android:layout_width="240dp"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:weightSum="10">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="5"
                        android:orientation="vertical"
                        android:gravity="center">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_login"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:background="@drawable/auth_button_custom"
                            android:text="@string/login" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/using_connect"
                            android:textSize="13sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="5"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="5dp"
                        android:weightSum="3">

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_margin="10dp"
                            android:layout_weight="1.2"
                            android:gravity="center"
                            tools:ignore="NestedWeights">

                            <com.facebook.login.widget.LoginButton
                                android:id="@+id/btn_login_facebook"
                                android:layout_width="225dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:background="@drawable/facebook_login_button_custom"
                                android:drawableLeft="@drawable/facebook_icon"
                                android:gravity="center"
                                android:text="@string/facebook_login" />

                            <ProgressBar
                                android:id="@+id/prb_loading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:progressTint="@color/green_3"
                                android:visibility="invisible" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1.2">

                            <androidx.appcompat.widget.AppCompatButton
                                android:id="@+id/btn_login_google"
                                android:layout_width="225dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="2dp"
                                android:background="@drawable/google_login_button_custom"
                                android:drawableLeft="@drawable/google_icon"
                                android:text="@string/google_login" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="7dp"
                    android:text="@string/register"
                    android:textColor="@color/green_8"
                    android:textSize="16sp"
                    android:textStyle="italic" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:text="@string/here"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>