<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_name_custom"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="8"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="290dp"
        android:layout_height="0dp"
        android:layout_weight="6"
        app:cardCornerRadius="22dp"
        app:cardElevation="7dp"
        android:outlineAmbientShadowColor="@color/purple_700">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp"
            android:weightSum="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="horizontal">

                <com.airbnb.lottie.LottieAnimationView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/lf30_editor_fggosqdo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tôi nói"
                    android:textColor="@color/green_4"
                    android:textSize="46sp"
                    android:textStyle="italic|bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        app:drawableLeftCompat="@drawable/ic_baseline_drive_file_rename_outline_24" />

                    <EditText
                        android:layout_width="240dp"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:hint="@string/full_name"
                        android:inputType="text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="3dp"
                        app:drawableLeftCompat="@drawable/ic_baseline_person_24" />

                    <EditText
                        android:layout_width="240dp"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="3dp"
                        android:layout_height="wrap_content"
                        app:drawableLeftCompat="@drawable/ic_baseline_password_24" />

                    <EditText
                        android:layout_width="240dp"
                        android:textSize="15sp"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center_horizontal">
                    <androidx.appcompat.widget.AppCompatButton
                        android:text="@string/sign_up"
                        android:layout_marginTop="35dp"
                        android:background="@drawable/auth_button_custom"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="bottom|center_horizontal"
                android:orientation="horizontal">
                <TextView
                    android:layout_marginBottom="7dp"
                    android:text="@string/login"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:textColor="@color/green_8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"/>
                <TextView
                    android:layout_marginBottom="7dp"
                    android:text="@string/here"
                    android:textSize="16sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>